--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login docker.io
         uses: docker/login-action@v1
