--- a/charts/vela-core/templates/addons/fluxcd.yaml
+++ b/charts/vela-core/templates/addons/fluxcd.yaml
@@ -5917,57 +5917,55 @@ data:
                 schematic:
                   cue:
                     template: "output: {\n\tapiVersion: \"source.toolkit.fluxcd.io/v1beta1\"\n\tmetadata:
-                      {\n\t\tname: context.name\n\t}\n\tif parameter.repoType == \"git\"
-                      {\n\t\tkind: \"GitRepository\"\n\t\tspec: {\n\t\t\turl: parameter.url\n\t\t\tref:\n\t\t\t\tbranch:
-                      parameter.branch\n\t\t\tinterval: parameter.pullInterval\n\t\t}\n\t}\n\tif
-                      parameter.repoType == \"helm\" {\n\t\tkind: \"HelmRepository\"\n\t\tspec:
+                      {\n\t\tname: context.name\n\t}\n\tif parameter.git != _|_ {\n\t\tkind:
+                      \"GitRepository\"\n\t\tspec: {\n\t\t\tinterval: parameter.pullInterval\n\t\t\turl:
+                      \     parameter.url\n\t\t\tref:\n\t\t\t\tbranch: parameter.git.branch\n\t\t}\n\t}\n\tif
+                      parameter.helm != _|_ {\n\t\tkind: \"HelmRepository\"\n\t\tspec:
                       {\n\t\t\tinterval: parameter.pullInterval\n\t\t\turl:      parameter.url\n\t\t\tif
-                      parameter.secretRef != _|_ {\n\t\t\t\tsecretRef: {\n\t\t\t\t\tname:
-                      parameter.secretRef\n\t\t\t\t}\n\t\t\t}\n\t\t}\n\t}\n\tif parameter.repoType
-                      == \"oss\" {\n\t\tkind: \"Bucket\"\n\t\tspec: {\n\t\t\tinterval:
-                      parameter.pullInterval\n\t\t\tprovider: parameter.provider\n\t\t\tendpoint:
-                      parameter.endpoint\n\t\t\tbucketName: parameter.bucketName\n\t\t\tif
-                      parameter.region != _|_ {\n\t\t\t\tregion: parameter.region\n\t\t\t}\n\t\t\tif
-                      parameter.timeout != _|_ {\n\t\t\t\ttimeout: parameter.timeout\n\t\t\t}\n\t\t\tif
-                      parameter.secretRef != _|_ {\n\t\t\t\tsecretRef: {\n\t\t\t\t\tname:
-                      parameter.secretRef\n\t\t\t\t}\n\t\t\t}\n\t\t}\n\t}\n}\n\noutputs:
+                      parameter.helm.secretRef != _|_ {\n\t\t\t\tsecretRef: {\n\t\t\t\t\tname:
+                      parameter.helm.secretRef\n\t\t\t\t}\n\t\t\t}\n\t\t}\n\t}\n\tif parameter.oss
+                      != _|_ {\n\t\tkind: \"Bucket\"\n\t\tspec: {\n\t\t\tendpoint:   parameter.url\n\t\t\tinterval:
+                      \  parameter.pullInterval\n\t\t\tbucketName: parameter.oss.bucketName\n\t\t\tprovider:
+                      \  parameter.oss.provider\n\t\t\tif parameter.oss.region != _|_
+                      {\n\t\t\t\tregion: parameter.oss.region\n\t\t\t}\n\t\t\tif parameter.oss.timeout
+                      != _|_ {\n\t\t\t\ttimeout: parameter.oss.timeout\n\t\t\t}\n\t\t\tif
+                      parameter.oss.secretRef != _|_ {\n\t\t\t\tsecretRef: {\n\t\t\t\t\tname:
+                      parameter.oss.secretRef\n\t\t\t\t}\n\t\t\t}\n\t\t}\n\t}\n}\n\noutputs:
                       release: {\n\tapiVersion: \"helm.toolkit.fluxcd.io/v2beta1\"\n\tkind:
                       \      \"HelmRelease\"\n\tmetadata: {\n\t\tname: context.name\n\t}\n\tspec:
                       {\n\t\tinterval: parameter.pullInterval\n\t\tchart: {\n\t\t\tspec:
                       {\n\t\t\t\tchart:   parameter.chart\n\t\t\t\tversion: parameter.version\n\t\t\t\tsourceRef:
-                      {\n\t\t\t\t\tif parameter.repoType == \"git\" {\n\t\t\t\t\t\tkind:
-                      \"GitRepository\"\n\t\t\t\t\t}\n\t\t\t\t\tif parameter.repoType
-                      == \"helm\" {\n\t\t\t\t\t\tkind: \"HelmRepository\"\n\t\t\t\t\t}\n\t\t\t\t\tif
-                      parameter.repoType == \"oss\" {\n\t\t\t\t\t\tkind: \"Bucket\"\n\t\t\t\t\t}\n\t\t\t\t\tname:
+                      {\n\t\t\t\t\tif parameter.git != _|_ {\n\t\t\t\t\t\tkind: \"GitRepository\"\n\t\t\t\t\t}\n\t\t\t\t\tif
+                      parameter.helm != _|_ {\n\t\t\t\t\t\tkind: \"HelmRepository\"\n\t\t\t\t\t}\n\t\t\t\t\tif
+                      parameter.oss != _|_ {\n\t\t\t\t\t\tkind: \"Bucket\"\n\t\t\t\t\t}\n\t\t\t\t\tname:
                       \     context.name\n\t\t\t\t\tnamespace: context.namespace\n\t\t\t\t}\n\t\t\t\tinterval:
                       parameter.pullInterval\n\t\t\t}\n\t\t}\n\t\tif parameter.targetNamespace
-                      != _|_ {\n\t\t\ttargetNamespace: parameter.targetNamespace\n\t\t}\n
-                      \       if parameter.releaseName != _|_ {\n\t\t\treleaseName: parameter.releaseName\n\t\t}\n\n\t\tif
+                      != _|_ {\n\t\t\ttargetNamespace: parameter.targetNamespace\n\t\t}\n\t\tif
+                      parameter.releaseName != _|_ {\n\t\t\treleaseName: parameter.releaseName\n\t\t}\n\t\tif
                       parameter.values != _|_ {\n\t\t\tvalues: parameter.values\n\t\t}\n\t}\n}\n\nparameter:
-                      {\n\t// +usage=The type of source of chart. Enum of git/helm/oss\n\trepoType:
-                      \"git\" | \"helm\" | \"oss\"\n\t// +usage=The Git or Helm repository
-                      URL, accept HTTP/S or SSH address as git url, required if repoType
-                      is git/helm\n\turl: string\n\t// +usage=The interval at which to
-                      check for repository/bucket and relese updates, optional\n\tpullInterval:
-                      *\"5m\" | string\n\t// +usage=The bucket's name, required if repoType
-                      is oss\n\tbucketName?: string\n\t// +usage=\"generic\" for Minio,
-                      Amazon S3, Google Cloud Storage, Alibaba Cloud OSS, \"aws\" for
-                      retrieve credentials from the EC2 service when credentials not specified,
-                      default \"generic\"\n\tprovider: *\"generic\" | \"aws\"\n\t// +usage=Bucket
-                      endpoint address, required if repoType is oss\n\tendpoint?: string\n\t//
-                      +usage=The bucket region, optional\n\tregion?: string\n\t// +usage=The
-                      timeout for download operations, optional\n\ttimeout?: string\n\t//
-                      +usage=1.The relative path to helm chart for git/oss source. 2.
-                      chart name for helm resource 3. relative path for chart package(e.g.
-                      ./charts/podinfo-1.2.3.tgz)\n\tchart: string\n\t// +usage=Chart
-                      version\n\tversion: *\"*\" | string\n\t// +usage=The Git reference
-                      to checkout and monitor for changes, defaults to master branch\n\tbranch:
-                      *\"master\" | string\n\t// +usage=The name of the secret containing
-                      authentication credentials for Helm repository or oss bucket\n\tsecretRef?:
-                      string\n\t// +usage=The namespace for helm chart\n\ttargetNamespace?:
-                      string\n\t// +usage=Chart value\n\tvalue?: #nestedmap\n    // +usage=The
-                      release name\n    releaseName?: string\n}\n\n#nestedmap: {\n\t...\n}
-                      \n"
+                      {\n\t// +usage=The interval at which to check for repository/bucket
+                      and relese updates, default to 5m\n\tpullInterval: *\"5m\" | string\n\t//
+                      +usage=The Git or Helm repository URL, OSS endpoint, accept HTTP/S
+                      or SSH address as git url,\n\turl: string\n\n\tgit?: {\n\t\t// +usage=The
+                      Git reference to checkout and monitor for changes, defaults to master
+                      branch\n\t\tbranch: *\"master\" | string\n\t}\n\thelm?: {\n\t\t//
+                      +usage=The name of the secret containing authentication credentials
+                      for Helm repository or oss bucket\n\t\tsecretRef?: string\n\t}\n\toss?:
+                      {\n\t\t// +usage=The bucket's name, required if repoType is oss\n\t\tbucketName:
+                      string\n\t\t// +usage=\"generic\" for Minio, Amazon S3, Google Cloud
+                      Storage, Alibaba Cloud OSS, \"aws\" for retrieve credentials from
+                      the EC2 service when credentials not specified, default \"generic\"\n\t\tprovider:
+                      *\"generic\" | \"aws\"\n\t\t// +usage=The bucket region, optional\n\t\tregion?:
+                      string\n\t\t// +usage=The timeout for download operations, optional\n\t\ttimeout?:
+                      string\n\t\t// +usage=The name of the secret containing authentication
+                      credentials for Helm repository or oss bucket\n\t\tsecrietRef?:
+                      string\n\t}\n\n\t// +usage=1.The relative path to helm chart for
+                      git/oss source. 2. chart name for helm resource 3. relative path
+                      for chart package(e.g. ./charts/podinfo-1.2.3.tgz)\n\tchart: string\n\t//
+                      +usage=Chart version\n\tversion: *\"*\" | string\n\t// +usage=The
+                      namespace for helm chart, optional\n\ttargetNamespace?: string\n\t//
+                      +usage=The release name\n\treleaseName?: string\n\t// +usage=Chart
+                      values\n\tvalues?: #nestedmap\n}\n\n#nestedmap: {\n\t...\n} \n"
                 workload:
                   type: autodetects.core.oam.dev
             type: raw
