add serviceType for webserver

--- a/vela-templates/registry/auto-gen/webserver.yaml
+++ b/vela-templates/registry/auto-gen/webserver.yaml
@@ -60,12 +60,15 @@ spec:
         				targetPort: parameter.port
         			},
         		]
+        		type: parameter.serviceType
         	}
         }
         parameter: {
         	image: string
         	cmd?: [...string]
-        	port: *80 | int
+        	// +usage=Specify what kind of Service you want. options: "ClusterIP","NodePort","LoadBalancer","ExternalName"
+        	serviceType: *"ClusterIP" | "NodePort" | "LoadBalancer" | "ExternalName"
+        	port:        *80 | int
         	env?: [...{
         		name:   string
         		value?: string
