--- a/charts/vela-core/templates/addons/prometheus.yaml
+++ b/charts/vela-core/templates/addons/prometheus.yaml
@@ -17,7 +17,7 @@ data:
             properties:
               chart: premetheus
               repoType: helm
-              repoUrl: https://prometheus-community.github.io/helm-charts
+              url: https://prometheus-community.github.io/helm-charts
             type: helm
         status:
           rollout:
