--- a/vela-templates/addons/auto-gen/keda.yaml
+++ b/vela-templates/addons/auto-gen/keda.yaml
@@ -13,7 +13,7 @@ spec:
         properties:
           chart: keda
           repoType: helm
-          repoUrl: https://kedacore.github.io/charts
+          url: https://kedacore.github.io/charts
         type: helm
     status:
       rollout:
