--- a/vela-templates/addons/auto-gen/kruise.yaml
+++ b/vela-templates/addons/auto-gen/kruise.yaml
@@ -12,10 +12,11 @@ spec:
       components:
       - name: kruise
         properties:
-          branch: master
           chart: ./charts/kruise/v0.9.0
+          git:
+            branch: master
           repoType: git
-          repoUrl: https://github.com/openkruise/kruise
+          url: https://github.com/openkruise/kruise
           values:
             featureGates: PreDownloadImageForInPlaceUpdate=true
         type: helm
