--- a/vela-templates/addons/auto-gen/observability.yaml
+++ b/vela-templates/addons/auto-gen/observability.yaml
@@ -11,11 +11,12 @@ spec:
       components:
       - name: grafana-registration
         properties:
-          branch: master
           chart: ./chart
+          git:
+            branch: master
           repoType: git
-          repoUrl: https://github.com/oam-dev/grafana-registration
           targetNamespace: observability
+          url: https://github.com/oam-dev/grafana-registration
           values:
             replicaCount: 1
         type: helm
@@ -24,8 +25,8 @@ spec:
           chart: grafana
           releaseName: grafana
           repoType: helm
-          repoUrl: https://grafana.github.io/helm-charts
           targetNamespace: observability
+          url: https://grafana.github.io/helm-charts
           version: 6.14.1
         traits:
         - properties:
@@ -48,8 +49,8 @@ spec:
           chart: loki-stack
           releaseName: loki
           repoType: helm
-          repoUrl: https://grafana.github.io/helm-charts
           targetNamespace: observability
+          url: https://grafana.github.io/helm-charts
           version: 2.4.1
         traits:
         - properties:
@@ -69,8 +70,8 @@ spec:
           chart: prometheus
           releaseName: prometheus
           repoType: helm
-          repoUrl: https://prometheus-community.github.io/helm-charts
           targetNamespace: observability
+          url: https://prometheus-community.github.io/helm-charts
           values:
             alertmanager:
               persistentVolume:
@@ -101,8 +102,8 @@ spec:
         properties:
           chart: kube-state-metrics
           repoType: helm
-          repoUrl: https://prometheus-community.github.io/helm-charts
           targetNamespace: observability
+          url: https://prometheus-community.github.io/helm-charts
           values:
             image:
               repository: oamdev/kube-state-metrics
