--- a/vela-templates/addons/auto-gen/prometheus.yaml
+++ b/vela-templates/addons/auto-gen/prometheus.yaml
@@ -14,7 +14,7 @@ spec:
         properties:
           chart: premetheus
           repoType: helm
-          repoUrl: https://prometheus-community.github.io/helm-charts
+          url: https://prometheus-community.github.io/helm-charts
         type: helm
     status:
       rollout:
