--- a/vela-templates/addons/auto-gen/terraform.yaml
+++ b/vela-templates/addons/auto-gen/terraform.yaml
@@ -14,7 +14,7 @@ spec:
         properties:
           chart: ./chart
           repoType: git
-          repoUrl: https://github.com/oam-dev/terraform-controller
+          url: https://github.com/oam-dev/terraform-controller
         type: helm
       - name: terraform-system
         properties:
