--- a/vela-templates/addons/prometheus/template.yaml
+++ b/vela-templates/addons/prometheus/template.yaml
@@ -19,7 +19,7 @@ spec:
           type: helm
           properties:
             repoType: helm
-            repoUrl: https://prometheus-community.github.io/helm-charts
+            url: https://prometheus-community.github.io/helm-charts
             chart: premetheus
 {{ range .DefinitionFiles }}
         - name: {{ .Name }}
