--- a/vela-templates/addons/fluxcd/definitions/helm-release.yaml
+++ b/vela-templates/addons/fluxcd/definitions/helm-release.yaml
@@ -19,22 +19,33 @@ spec:
         	if parameter.repoType == "git" {
         		kind: "GitRepository"
         		spec: {
-        			url: parameter.repoUrl
-        			ref:
-        				branch: parameter.branch
-        			interval: parameter.pullInterval
+        			url: parameter.url
+        			if parameter.git.branch != _|_ {
+        				ref: branch: parameter.git.branch
+        			}
+        			_secret
+        			_sourceCommonArgs
+        		}
+        	}
+        	if parameter.repoType == "oss" {
+        		kind: "Bucket"
+        		spec: {
+        			endpoint:   parameter.url
+        			bucketName: parameter.oss.bucketName
+        			provider:   parameter.oss.provider
+        			if parameter.oss.region != _|_ {
+        				region: parameter.oss.region
+        			}
+        			_secret
+        			_sourceCommonArgs
         		}
         	}
         	if parameter.repoType == "helm" {
         		kind: "HelmRepository"
         		spec: {
-        			interval: parameter.pullInterval
-        			url:      parameter.repoUrl
-        			if parameter.secretRef != _|_ {
-        				secretRef: {
-        					name: parameter.secretRef
-        				}
-        			}
+        			url: parameter.url
+        			_secret
+        			_sourceCommonArgs
         		}
         	}
         }
@@ -58,6 +69,9 @@ spec:
         					if parameter.repoType == "helm" {
         						kind: "HelmRepository"
         					}
+        					if parameter.repoType == "oss" {
+        						kind: "Bucket"
+        					}
         					name:      context.name
         					namespace: context.namespace
         				}
@@ -67,36 +81,64 @@ spec:
         		if parameter.targetNamespace != _|_ {
         			targetNamespace: parameter.targetNamespace
         		}
-                if parameter.releaseName != _|_ {
+        		if parameter.releaseName != _|_ {
         			releaseName: parameter.releaseName
         		}
-
         		if parameter.values != _|_ {
         			values: parameter.values
         		}
         	}
         }
 
+        _secret: {
+        	if parameter.secretRef != _|_ {
+        		secretRef: {
+        			name: parameter.secretRef
+        		}
+        	}
+        }
+
+        _sourceCommonArgs: {
+        	interval: parameter.pullInterval
+        	if parameter.timeout != _|_ {
+        		timeout: parameter.timeout
+        	}
+        }
+
         parameter: {
-        	repoType: "git" | "helm"
-        	// +usage=The Git or Helm repository URL, accept HTTP/S or SSH address as git url.
-        	repoUrl: string
-        	// +usage=The interval at which to check for repository and relese updates.
+        	repoType: *"helm" | "git" | "oss"
+        	// +usage=The interval at which to check for repository/bucket and relese updates, default to 5m
         	pullInterval: *"5m" | string
-        	// +usage=1.The relative path to helm chart for git source. 2. chart name for helm resource
+        	// +usage=The Git or Helm repository URL, OSS endpoint, accept HTTP/S or SSH address as git url,
+        	url: string
+        	// +usage=The name of the secret containing authentication credentials
+        	secretRef?: string
+        	// +usage=The timeout for operations like download index/clone repository, optional
+        	timeout?: string
+
+        	git?: {
+        		// +usage=The Git reference to checkout and monitor for changes, defaults to master branch
+        		branch: string
+        	}
+        	oss?: {
+        		// +usage=The bucket's name, required if repoType is oss
+        		bucketName: string
+        		// +usage="generic" for Minio, Amazon S3, Google Cloud Storage, Alibaba Cloud OSS, "aws" for retrieve credentials from the EC2 service when credentials not specified, default "generic"
+        		provider: *"generic" | "aws"
+        		// +usage=The bucket region, optional
+        		region?: string
+        	}
+
+        	// +usage=1.The relative path to helm chart for git/oss source. 2. chart name for helm resource 3. relative path for chart package(e.g. ./charts/podinfo-1.2.3.tgz)
         	chart: string
         	// +usage=Chart version
         	version: *"*" | string
-        	// +usage=The Git reference to checkout and monitor for changes, defaults to master branch.
-        	branch: *"master" | string
-        	// +usage=The name of the secret containing authentication credentials for the Helm repository.
-        	secretRef?: string
-        	// +usage=The namespace for helm chart
+        	// +usage=The namespace for helm chart, optional
         	targetNamespace?: string
-        	// +usage=Chart version
-        	value?: #nestedmap
-            // +usage=The release name
-            releaseName?: string
+        	// +usage=The release name
+        	releaseName?: string
+        	// +usage=Chart values
+        	values?: #nestedmap
         }
 
         #nestedmap: {
