--- a/hack/pressure-test/app-templates/sae.yaml
+++ b/hack/pressure-test/app-templates/sae.yaml
@@ -15,6 +15,9 @@ spec:
           properties:
             name: example-sidecar
             image: busybox
+            cmd:
+              - sleep
+              - '1000000'
         - type: env
           properties:
             env:
