fix(demo) fix resource in workflow-with-ocm

--- a/charts/vela-core/templates/defwithtemplate/env-binding.yaml
+++ b/charts/vela-core/templates/defwithtemplate/env-binding.yaml
@@ -40,10 +40,10 @@ spec:
         		name: string
         		type: string
         		properties: {...}
-        		traits?: {
+        		traits?: [...{
         			type: string
         			properties: {...}
-        		}
+        		}]
         	}]
         	placement: {
         		clusterSelector?: {
