add more source to kustomize

--- a/charts/vela-core/templates/addons/fluxcd.yaml
+++ b/charts/vela-core/templates/addons/fluxcd.yaml
@@ -5980,21 +5980,44 @@ data:
               spec:
                 schematic:
                   cue:
-                    template: "output: {\n\tapiVersion: \"source.toolkit.fluxcd.io/v1beta1\"\n\tkind:
-                      \      \"GitRepository\"\n\tmetadata: {\n\t\tname: context.name\n\t}\n\tspec:
-                      {\n\t\tinterval: parameter.pullInterval\n\t\turl:      parameter.repoUrl\n\t\tref:
-                      branch: parameter.branch\n\t}\n}\noutputs: kustomize: {\n\tapiVersion:
+                    template: "output: {\n\tapiVersion: \"source.toolkit.fluxcd.io/v1beta1\"\n\tmetadata:
+                      {\n\t\tname: context.name\n\t}\n\tif parameter.repoType == \"git\"
+                      {\n\t\tkind: \"GitRepository\"\n\t\tspec: {\n\t\t\turl: parameter.url\n\t\t\tif
+                      parameter.git.branch != _|_ {\n\t\t\t\tref: branch: parameter.git.branch\n\t\t\t}\n\t\t\t_secret\n\t\t\t_sourceCommonArgs\n\t\t}\n\t}\n\tif
+                      parameter.repoType == \"oss\" {\n\t\tkind: \"Bucket\"\n\t\tspec:
+                      {\n\t\t\tendpoint:   parameter.url\n\t\t\tbucketName: parameter.oss.bucketName\n\t\t\tprovider:
+                      \  parameter.oss.provider\n\t\t\tif parameter.oss.region != _|_
+                      {\n\t\t\t\tregion: parameter.oss.region\n\t\t\t}\n\t\t\t_secret\n\t\t\t_sourceCommonArgs\n\t\t}\n\t}\n\tif
+                      parameter.repoType == \"helm\" {\n\t\tkind: \"HelmRepository\"\n\t\tspec:
+                      {\n\t\t\turl: parameter.url\n\t\t\t_secret\n\t\t\t_sourceCommonArgs\n\t\t}\n\t}\n}\n\n_secret:
+                      {\n\tif parameter.secretRef != _|_ {\n\t\tsecretRef: {\n\t\t\tname:
+                      parameter.secretRef\n\t\t}\n\t}\n}\n\n_sourceCommonArgs: {\n\tinterval:
+                      parameter.pullInterval\n\tif parameter.timeout != _|_ {\n\t\ttimeout:
+                      parameter.timeout\n\t}\n}\n\noutputs: kustomize: {\n\tapiVersion:
                       \"kustomize.toolkit.fluxcd.io/v1beta1\"\n\tkind:       \"Kustomization\"\n\tmetadata:
                       {\n\t\tname: context.name\n\t}\n\tspec: {\n\t\tinterval: parameter.pullInterval\n\t\tsourceRef:
-                      {\n\t\t\tkind: \"GitRepository\"\n\t\t\tname: context.name\n\t\t}\n\t\tpath:
+                      {\n\t\t\tif parameter.repoType == \"git\" {\n\t\t\t\tkind: \"GitRepository\"\n\t\t\t}\n\t\t\tif
+                      parameter.repoType == \"helm\" {\n\t\t\t\tkind: \"HelmRepository\"\n\t\t\t}\n\t\t\tif
+                      parameter.repoType == \"oss\" {\n\t\t\t\tkind: \"Bucket\"\n\t\t\t}\n\t\t\tname:
+                      \     context.name\n\t\t\tnamespace: context.namespace\n\t\t}\n\t\tpath:
                       \      parameter.path\n\t\tprune:      true\n\t\tvalidation: \"client\"\n\t}\n}\nparameter:
-                      {\n\t//+usage=The repository URL, can be a HTTP/S or SSH address.\n\trepoUrl:
-                      string\n\t//+usage=The interval at which to check for repository
-                      updates.\n\tpullInterval: *\"1m\" | string\n\t//+usage=The Git reference
-                      to checkout and monitor for changes, defaults to master branch.\n\tbranch:
-                      *\"master\" | string\n\t//+usage=Path to the directory containing
-                      the kustomization.yaml file, or the set of plain YAMLs a kustomization.yaml
-                      should be generated for.\n\tpath: string\n}\n"
+                      {\n\trepoType: *\"helm\" | \"git\" | \"oss\"\n\t// +usage=The interval
+                      at which to check for repository/bucket and relese updates, default
+                      to 5m\n\tpullInterval: *\"5m\" | string\n\t// +usage=The Git or
+                      Helm repository URL, OSS endpoint, accept HTTP/S or SSH address
+                      as git url,\n\turl: string\n\t// +usage=The name of the secret containing
+                      authentication credentials\n\tsecretRef?: string\n\t// +usage=The
+                      timeout for operations like download index/clone repository, optional\n\ttimeout?:
+                      string\n\tgit?: {\n\t\t// +usage=The Git reference to checkout and
+                      monitor for changes, defaults to master branch\n\t\tbranch: string\n\t}\n\toss?:
+                      {\n\t\t// +usage=The bucket's name, required if repoType is oss\n\t\tbucketName:
+                      string\n\t\t// +usage=\"generic\" for Minio, Amazon S3, Google Cloud
+                      Storage, Alibaba Cloud OSS, \"aws\" for retrieve credentials from
+                      the EC2 service when credentials not specified, default \"generic\"\n\t\tprovider:
+                      *\"generic\" | \"aws\"\n\t\t// +usage=The bucket region, optional\n\t\tregion?:
+                      string\n\t}\n\t//+usage=Path to the directory containing the kustomization.yaml
+                      file, or the set of plain YAMLs a kustomization.yaml should be generated
+                      for.\n\tpath: string\n}\n"
                 workload:
                   type: autodetects.core.oam.dev
             type: raw
