--- a/vela-templates/addons/auto-gen/kruise.yaml
+++ b/vela-templates/addons/auto-gen/kruise.yaml
@@ -94,8 +94,48 @@ spec:
                   [...string]\n\t\tip: string\n\t}]\n\n\t// +usage=Instructions for
                   assessing whether the container is alive.\n\tlivenessProbe?: #HealthProbe\n\n\t//
                   +usage=Instructions for assessing whether the container is in a
-                  suitable state to serve traffic.\n\treadinessProbe?: #HealthProbe\n}
-                  \n"
+                  suitable state to serve traffic.\n\treadinessProbe?: #HealthProbe\n}\n\n#ENV:
+                  {\n\t// +usage=Environment variable name\n\tname: string\n\t// +usage=The
+                  value of the environment variable\n\tvalue?: string\n\t// +usage=Specifies
+                  a source the value of this var should come from\n\tvalueFrom?: {\n\t\t//
+                  +usage=Selects a key of a secret in the pod's namespace\n\t\tsecretKeyRef:
+                  {\n\t\t\t// +usage=The name of the secret in the pod's namespace
+                  to select from\n\t\t\tname: string\n\t\t\t// +usage=The key of the
+                  secret to select from. Must be a valid secret key\n\t\t\tkey: string\n\t\t}\n\t}\n}\n\n#HealthProbe:
+                  {\n\n\t// +usage=Instructions for assessing container health by
+                  executing a command. Either this attribute or the httpGet attribute
+                  or the tcpSocket attribute MUST be specified. This attribute is
+                  mutually exclusive with both the httpGet attribute and the tcpSocket
+                  attribute.\n\texec?: {\n\t\t// +usage=A command to be executed inside
+                  the container to assess its health. Each space delimited token of
+                  the command is a separate array element. Commands exiting 0 are
+                  considered to be successful probes, whilst all other exit codes
+                  are considered failures.\n\t\tcommand: [...string]\n\t}\n\n\t//
+                  +usage=Instructions for assessing container health by executing
+                  an HTTP GET request. Either this attribute or the exec attribute
+                  or the tcpSocket attribute MUST be specified. This attribute is
+                  mutually exclusive with both the exec attribute and the tcpSocket
+                  attribute.\n\thttpGet?: {\n\t\t// +usage=The endpoint, relative
+                  to the port, to which the HTTP GET request should be directed.\n\t\tpath:
+                  string\n\t\t// +usage=The TCP socket within the container to which
+                  the HTTP GET request should be directed.\n\t\tport: int\n\t\thttpHeaders?:
+                  [...{\n\t\t\tname:  string\n\t\t\tvalue: string\n\t\t}]\n\t}\n\n\t//
+                  +usage=Instructions for assessing container health by probing a
+                  TCP socket. Either this attribute or the exec attribute or the httpGet
+                  attribute MUST be specified. This attribute is mutually exclusive
+                  with both the exec attribute and the httpGet attribute.\n\ttcpSocket?:
+                  {\n\t\t// +usage=The TCP socket within the container that should
+                  be probed to assess container health.\n\t\tport: int\n\t}\n\n\t//
+                  +usage=Number of seconds after the container is started before the
+                  first probe is initiated.\n\tinitialDelaySeconds: *0 | int\n\n\t//
+                  +usage=How often, in seconds, to execute the probe.\n\tperiodSeconds:
+                  *10 | int\n\n\t// +usage=Number of seconds after which the probe
+                  times out.\n\ttimeoutSeconds: *1 | int\n\n\t// +usage=Minimum consecutive
+                  successes for the probe to be considered successful after having
+                  failed.\n\tsuccessThreshold: *1 | int\n\n\t// +usage=Number of consecutive
+                  failures required to determine the container is not alive (liveness
+                  probe) or not ready (readiness probe).\n\tfailureThreshold: *3 |
+                  int\n} \n"
             workload:
               definition:
                 apiVersion: apps.kruise.io/v1alpha1
