Fix: add fluxcd dashbaords
Added two fluxcd dashboards and also install its dependencies

just keep the ready Dashboard

--- a/vela-templates/addons/auto-gen/observability.yaml
+++ b/vela-templates/addons/auto-gen/observability.yaml
@@ -42,6 +42,7 @@ spec:
             urls:
             - https://raw.githubusercontent.com/oam-dev/grafana-registration/master/dashboards/kubevela_core_logging.json
             - https://raw.githubusercontent.com/oam-dev/grafana-registration/master/dashboards/kubevela_core_monitoring.json
+            - https://raw.githubusercontent.com/oam-dev/grafana-registration/master/dashboards/flux2/cluster.json
           type: import-grafana-dashboard
         type: helm
       - name: loki
@@ -109,6 +110,14 @@ spec:
               repository: oamdev/kube-state-metrics
               tag: v2.1.0
           version: 3.4.1
+        type: helm
+      - name: kube-prometheus-stack
+        properties:
+          chart: kube-prometheus-stack
+          repoType: helm
+          targetNamespace: observability
+          url: https://prometheus-community.github.io/helm-charts
+          version: 18.0.0
         type: helm
     status:
       rollout:
