--- a/charts/vela-core/templates/addons/observability.yaml
+++ b/charts/vela-core/templates/addons/observability.yaml
@@ -45,6 +45,7 @@ data:
                 urls:
                 - https://raw.githubusercontent.com/oam-dev/grafana-registration/master/dashboards/kubevela_core_logging.json
                 - https://raw.githubusercontent.com/oam-dev/grafana-registration/master/dashboards/kubevela_core_monitoring.json
+                - https://raw.githubusercontent.com/oam-dev/grafana-registration/master/dashboards/flux2/cluster.json
               type: import-grafana-dashboard
             type: helm
           - name: loki
@@ -112,6 +113,14 @@ data:
                   repository: oamdev/kube-state-metrics
                   tag: v2.1.0
               version: 3.4.1
+            type: helm
+          - name: kube-prometheus-stack
+            properties:
+              chart: kube-prometheus-stack
+              repoType: helm
+              targetNamespace: observability
+              url: https://prometheus-community.github.io/helm-charts
+              version: 18.0.0
             type: helm
         status:
           rollout:
