fix dryrun test

--- a/references/appfile/dryrun/testdata/dryrun-exp-comp.yaml
+++ b/references/appfile/dryrun/testdata/dryrun-exp-comp.yaml
@@ -1,6 +1,7 @@
 ExternalRevision: ""
 InsertConfigNotReady: false
 Name: myweb
+Namespace: default
 PackagedTraitResources: null
 PackagedWorkloadResources: null
 RevisionHash: ""
